fixed alignment issue of try again button

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -211,8 +211,8 @@ a{
   position:absolute;
     width: 502px;
 
-  bottom: 40px;
-  left: 362px;
+  bottom: 37px;
+  left: 384px;
   text-align:right;
  z-index: 1002;
 }
